--- a/src/app/admin/admin-bundle/admin-bundle.component.scss
+++ b/src/app/admin/admin-bundle/admin-bundle.component.scss
@@ -5,6 +5,14 @@
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+label {
+    width: 180px;
+    margin: 0;
+    input {
+        margin: 0 !important;
+    }
+}
+
 .breakfast {
     margin-bottom: 50px;
     padding: 20px;
@@ -12,23 +20,74 @@
     box-shadow: 0 0 10px 0 rgb(219, 218, 218);
 }
 
+.save {
+    height: 38px;
+}
+
 .img {
     width: 110px;
     height: 110px;
     display: inline-block;
     margin-right: 20px;
-    border-radius: 20px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     border: 1px solid #dbdbdb;
 }
 
-// width: 110px;
-//        height: 110px;
-//        margin-right: 20px;
-//        border-radius: 20px;
-//        background-color: $primary;
-//        background-position: center;
-//        background-repeat: no-repeat;
-//        background-size: cover;
+.image {
+    width: 110px;
+    height: 110px;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.delete-img {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: all 0.2s ease;
+    cursor: pointer;
+    i {
+        font-size: 30px;
+        transition: all 0.2s ease;
+        opacity: 0;
+    }
+    &:hover {
+        background-color: rgba(231, 231, 231, 0.144);
+        i {
+            opacity: 0.8;
+        }
+    }
+}
+
+.form-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 20px;
+}
+
+.image-wrapper {
+    width: 110px;
+    height: 110px;
+}
+
+.danger {
+    border-color: $danger;
+}
+
+@media screen and (max-width: 414px) {
+    label{
+        margin-bottom: 15px;
+    }
+    .form-content {
+        flex-wrap: wrap;
+    }
+}
