--- a/src/app/pages/pricing/pricing.component.scss
+++ b/src/app/pages/pricing/pricing.component.scss
@@ -23,11 +23,18 @@
     background: #26120c;
 }
 
-.feedback-wrapper{
+.feedback-wrapper {
     margin-top: -350px;
-    ::ng-deep{
-        .feedback{
-            color: red !important;
+    ::ng-deep {
+        .feedback {
+            h2,
+            h4,
+            p {
+                color: #fff ;
+            }
+            p {
+                opacity: 0.7;
+            }
         }
     }
 }
@@ -54,7 +61,7 @@
     }
 }
 
-.questions{
+.questions {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -71,19 +78,19 @@
     transition: all 1s ease;
 }
 
-.question-item-top{
+.question-item-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 37px;
-    p{
+    p {
         font-weight: 500;
         font-size: 22px;
         color: #fff;
     }
 }
 
-.line{
+.line {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     margin-bottom: 20px;
 }
@@ -96,8 +103,8 @@
     cursor: pointer;
     position: relative;
     background: transparent;
-    &::after{
-        content: '';
+    &::after {
+        content: "";
         display: block;
         width: 100%;
         height: 4px;
@@ -151,7 +158,6 @@
     }
 }
 
-
 @media screen and (max-width: 414px) {
     .bundle {
         padding: 0px 30px;
@@ -163,23 +169,23 @@
     .bundle-cards {
         flex-wrap: wrap;
     }
-    .question{
+    .question {
         padding: 30px 0;
         margin-bottom: 80px;
     }
-    .feedback{
+    .feedback {
         margin: 0;
     }
-    .question-inner{
+    .question-inner {
         padding: 0px 30px;
     }
-    .question-item{
+    .question-item {
         width: 100%;
         margin-bottom: 20px;
         padding: 15px;
     }
-    .question-item-top{
-        p{
+    .question-item-top {
+        p {
             font-size: 18px;
         }
     }
@@ -193,6 +199,19 @@
         p {
             width: 100%;
             margin-top: 10px;
+        }
+    }
+    .feedback-wrapper {
+        margin-top: 0;
+        ::ng-deep {
+            .feedback {
+                h2, p {
+                    color: $titleText;
+                }
+                h4 {
+                    color: $primary;
+                }
+            }
         }
     }
     .commitment-footer {
