--- a/src/app/pages/foods/foods.component.scss
+++ b/src/app/pages/foods/foods.component.scss
@@ -176,6 +176,9 @@
     .product-desc {
         text-align: right;
         width: 300px;
+        p{
+            margin-bottom: 30px;
+        }
         .primary-text {
             display: block;
             margin: 10px 0px 30px;
@@ -189,14 +192,16 @@
     }
 }
 
-.product-photos, .product-desc{
+.product-photos,
+.product-desc {
     position: relative;
 }
-.product-photos{
+.product-photos {
     padding-top: 100px;
 }
 
-.footer-photos, .product-footer-btns {
+.footer-photos,
+.product-footer-btns {
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -223,9 +228,9 @@
         border-radius: 10px;
         background: url("../../../assets/images/menu-item-img.jpg") center/cover no-repeat;
         cursor: pointer;
-        transition: all .2s ease;
-        &:hover{
-            opacity: .8;
+        transition: all 0.2s ease;
+        &:hover {
+            opacity: 0.8;
         }
     }
 }
@@ -251,101 +256,169 @@
     }
 }
 
-@media screen and (max-width: 414px){
-    .menu{
+.details{
+    padding: 80px 50px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    .card{
+        width: 300px;
+        height: 380px;
+        h4{
+            margin-bottom: 45px;
+        }
+        p {
+            text-align: left;
+        }
+    }
+    .close-btn {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        opacity: .7;
+        transition: all .2s ease;
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
+.description{
+    width: 280px;
+}
+
+.details-photos{
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.details-main-photo{
+    height: 240px;
+    background: url('../../../assets/images/main-product-img.png') center/cover no-repeat;
+}
+
+.details-footer-photos{
+    display: flex;
+    justify-content: space-evenly;
+}
+.details-footer-photo {
+        width: 70px;
+        height: 70px;
+        margin-left: 30px;
+        border-radius: 10px;
+        background: url("../../../assets/images/menu-item-img.jpg") center/cover no-repeat;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+@media screen and (max-width: 414px) {
+    .menu {
         padding: 0px 30px;
         margin-bottom: 80px;
     }
-    .menu-title{
+    .menu-title {
         margin: 60px 0 50px;
-        h2{
+        h2 {
             margin-bottom: 0;
         }
-        p{
+        p {
             width: 100%;
         }
     }
-    .menu-bottom{
+    .menu-bottom {
         flex-wrap: wrap;
     }
-    .menu-sidebar{
+    .menu-sidebar {
         width: 100%;
         justify-content: space-between;
-        .sidebar-right{
+        .sidebar-right {
             padding: 0;
         }
-        .menu-list{
+        .menu-list {
             margin-top: 0;
         }
-        .sidebar-btns{
+        .sidebar-btns {
             justify-content: start;
             padding: 0;
             border: none;
         }
-        .sidebar-btn{
+        .sidebar-btn {
             font-size: 23px !important;
         }
-        .sidebar-footer, .choose{
+        .sidebar-footer,
+        .choose {
             display: none;
         }
-        .list-item{
+        .list-item {
             flex-direction: row-reverse;
-            .item-title{
+            .item-title {
                 margin-right: 10px;
                 text-align: right;
             }
-            .item-img{
+            .item-img {
                 width: 50px;
                 height: 50px;
                 margin: 0;
             }
         }
     }
-    .menu-content{
+    .menu-content {
         padding: 0;
     }
-    .product{
+    .product {
         flex-wrap: wrap;
     }
-    .product-photos{
+    .product-photos {
         width: 100%;
         height: 350px;
         margin-bottom: 40px;
         padding-top: 60px;
         display: flex;
         justify-content: center;
-        .product-main-photo{
+        .product-main-photo {
             width: 259px;
             margin: 0;
         }
-        .footer-photos{
+        .footer-photos {
             left: 50%;
             width: auto;
             transform: translateX(-50%);
-            .footer-photo:first-child{
+            .footer-photo:first-child {
                 margin: 0;
             }
         }
     }
-    .product-desc{
+    .product-desc {
         height: 295px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        h4{
+        p{
+            height: 115px;
+            margin-bottom: 0 !important;
+        }
+        h4 {
             width: 125px;
         }
-        span{
+        span {
             margin: 0px 0px 10px !important;
         }
-        .product-footer-btns{
-            button:first-child{
+        .product-footer-btns {
+            button:first-child {
                 border: none;
-                &:hover{
+                &:hover {
                     color: $primaryHover;
                     background: transparent;
                 }
             }
         }
+    }
+    .details{
+        flex-wrap: wrap;
     }
 }
