--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -20,7 +20,7 @@
                 <a [routerLink]="[ '/foods' ]" routerLinkActive="active" class="link">Foods</a>
                 <a [routerLink]="[ '/pricing' ]" routerLinkActive="active" class="link">Pricing</a>
                 <a [routerLink]="[ '/login' ]" routerLinkActive="active-sing-in" class="outline-primary-medium sing-in">Sing In</a>
-                <button class="primary-medium basket"></button>
+                <button [routerLink]="[ '/order' ]" class="primary-medium basket"></button>
             </nav>
         </div>
     </div>
