--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,9 +27,7 @@
             </div>
             <div class="commitment-footer">
                 <div class="card">
-                    <div class="card-ico">
-                        <!--<img src="../../../assets/images/star.svg" alt="...">-->
-                    </div>
+                    <div class="card-ico"></div>
                     <h3>Top Rated</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit form du lahoke.</p>
                 </div>
