--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -1,1 +1,43 @@
-<p>orders works!</p>
+<article>
+    <div class="wrapper">
+        <div class="products-wrapper">
+            <div class="left">
+                <div class="product-title text-center">
+                    <h2>Items & Payment</h2>
+                    <span class="sup-title">4 items</span>
+                </div>
+                <div class="products">
+                    <div class="prod">
+                        <div class="prod-img"></div>
+                        <p class="prod-name">Chicken Parmesan</p>
+                        <p>$15.00</p>
+                    </div>
+                    <div class="prod">
+                        <div class="prod-img"></div>
+                        <p class="prod-name">Chicken Parmesan</p>
+                        <p>$15.00</p>
+                    </div>
+                    <div class="prod">
+                        <div class="prod-img"></div>
+                        <p class="prod-name">Chicken Parmesan</p>
+                        <p>$15.00</p>
+                    </div>
+                    <div class="prod">
+                        <div class="prod-img"></div>
+                        <p class="prod-name">Chicken Parmesan</p>
+                        <p>$15.00</p>
+                    </div>
+                </div>
+            </div>
+            <div class="order-data">
+                <div class="information">
+                    <h5 class="title-data">
+                        Shipping Information
+                        <button class="edit-btn"></button>
+                    </h5>
+    
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
