--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,12 +3,16 @@
         <div class="col">
             <div class="content d-flex align-items-start">
                 <div class="btn-group-vertical" role="group" aria-label="Basic example">
-                    <a [routerLink]="[ 'category' ]" routerLinkActive="active" class="btn btn-secondary">Category</a>
                     <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-secondary">Product</a>
                     <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
                     <a [routerLink]="[ 'bundle' ]" routerLinkActive="active" class="btn btn-secondary">Bundle</a>
                 </div>
-                <div class="tab-content col" id="v-pills-tabContent">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-secondary">Product</a>
+                    <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
+                    <a [routerLink]="[ 'bundle' ]" routerLinkActive="active" class="btn btn-secondary">Bundle</a>
+                </div>
+                <div class="tab-content col content" id="v-pills-tabContent">
                     <router-outlet></router-outlet>
                 </div>
             </div>
