--- a/src/app/admin/admin-bundle/admin-bundle.component.html
+++ b/src/app/admin/admin-bundle/admin-bundle.component.html
@@ -36,7 +36,7 @@
     </div>
     <ng-container *ngIf="!imageStatus;">
         <div class="custom-file">
-            <input (change)="uploadFile($event)" type="file" class="" id="urlImage" required>
+            <input (change)="uploadFile($event)" class="form-control" type="file" id="urlImage" required>
         </div>
         <div class="progress mt-3 mb-3">
             <div class="progress-bar progress-bar-striped bg-success" role="progressbar"
