--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,15 +4,15 @@
             <div class="content d-flex align-items-start">
                 <div class="btn-group-vertical" role="group" aria-label="Basic example">
                     <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-secondary">Product</a>
-                    <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
                     <a [routerLink]="[ 'bundle' ]" routerLinkActive="active" class="btn btn-secondary">Bundle</a>
+                    <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
                 </div>
                 <div class="btn-group" role="group" aria-label="Basic example">
                     <a [routerLink]="[ 'product' ]" routerLinkActive="active" class="btn btn-secondary">Product</a>
-                    <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
                     <a [routerLink]="[ 'bundle' ]" routerLinkActive="active" class="btn btn-secondary">Bundle</a>
+                    <a [routerLink]="[ 'orders' ]" routerLinkActive="active" class="btn btn-secondary">Orders</a>
                 </div>
-                <div class="tab-content col content" id="v-pills-tabContent">
+                <div class="container-fluid" id="v-pills-tabContent">
                     <router-outlet></router-outlet>
                 </div>
             </div>
